WIP: use unmodifiable EnumSet for style sets and simplify setNoTitle